# noctavia

./: Cargo.toml  GEMINI.md  README.md
apps/midi_trainer/: Cargo.toml
apps/midi_trainer/src/: main.rs
apps/noctavia/: Cargo.toml
apps/noctavia/src/: main.rs
assets/: test.mid
crates/app_core/: Cargo.toml
crates/midi_clock/: Cargo.toml
crates/midi_clock/src/: lib.rs
crates/midi_domain/: Cargo.toml
crates/midi_domain/src/: lib.rs
crates/midi_io/: Cargo.toml
crates/midi_io/src/: lib.rs
crates/midi_parser/: Cargo.toml
crates/midi_parser/src/: lib.rs
crates/midi_synth/: Cargo.toml
crates/midi_synth/src/: lib.rs
crates/noctavia/: Cargo.toml
crates/noctavia/src/: main.rs
crates/noctavia_app_core/: Cargo.toml
crates/noctavia_app_core/src/: lib.rs
crates/noctavia_midi/: Cargo.toml
crates/noctavia_midi/examples/: midi_latency_calibration.rs  midi_pitch_detection.rs  pitch_detection_test.rs
crates/noctavia_midi/src/: clock.rs  domain.rs  io.rs  lib.rs  parser.rs  synth.rs
crates/noctavia_midi_clock/: Cargo.toml
crates/noctavia_midi_clock/src/: lib.rs
crates/noctavia_midi_domain/: Cargo.toml
crates/noctavia_midi_io/: Cargo.toml
crates/noctavia_midi_io/src/: lib.rs
crates/noctavia_midi_parser/: Cargo.toml
crates/noctavia_midi_parser/src/: lib.rs
crates/noctavia_midi_synth/: Cargo.toml
crates/noctavia_note_matcher/: Cargo.toml
crates/noctavia_note_matcher/src/: lib.rs
crates/noctavia_piano_roll/: Cargo.toml
crates/noctavia_piano_roll/examples/: key_inspector.rs  piano_roll.rs  shader.wgsl
crates/noctavia_piano_roll/src/: gpu.rs  instance.rs  lib.rs  mesh.rs  model.rs  pipeline.rs
crates/noctavia_piano_roll_model/: Cargo.toml
crates/noctavia_piano_roll_model/src/: lib.rs
crates/noctavia_render/: Cargo.toml
crates/noctavia_render/src/: buffer.rs  camera.rs  debug.rs  engine.rs  lib.rs  primitive.rs
crates/noctavia_settings_store/: Cargo.toml
crates/noctavia_settings_store/src/: lib.rs
crates/noctavia_telemetry/: Cargo.toml
crates/noctavia_telemetry/src/: lib.rs
crates/noctavia_ui_iced_widgets/: Cargo.toml
crates/noctavia_ui_iced_widgets/src/: lib.rs
crates/noctavia_ui_transport/: Cargo.toml
crates/noctavia_ui_transport/src/: lib.rs
crates/note_matcher/: Cargo.toml
crates/note_matcher/src/: lib.rs
crates/piano_roll_model/: Cargo.toml
crates/settings_store/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/ui_iced_widgets/: Cargo.toml
crates/ui_iced_widgets/src/: lib.rs
crates/ui_transport/: Cargo.toml
crates/ui_transport/src/: lib.rs
