[workspace]
resolver = "2"
members = [
    "apps/midi_trainer",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rusthesia Developers"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
iced = { version = "0.13", features = ["canvas", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
midly = "0.5"
midir = "0.9"
chrono = "0.4"
rustysynth = "1.3"
rodio = "0.17"
xsynth-core = "0.3.4"
xsynth-soundfonts = "0.3.4"
