[package]
name = "midi_trainer"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
tokio.workspace = true
midi_domain = { path = "../../crates/midi_domain" }
midi_parser = { path = "../../crates/midi_parser" }
midi_clock = { path = "../../crates/midi_clock" }
midi_io = { path = "../../crates/midi_io" }
note_matcher = { path = "../../crates/note_matcher" }
ui_iced_widgets = { path = "../../crates/ui_iced_widgets" }
midi_synth = { path = "../../crates/midi_synth" }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossbeam-channel = "0.5"
rodio = "0.17"
clap = { version = "4.0", features = ["derive"] }
rfd = "0.15"
