[package]
name = "noctavia"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
tokio.workspace = true
noctavia_midi_domain = { path = "../../crates/noctavia_midi_domain" }
noctavia_midi_parser = { path = "../../crates/noctavia_midi_parser" }
noctavia_midi_clock = { path = "../../crates/noctavia_midi_clock" }
noctavia_midi_io = { path = "../../crates/noctavia_midi_io" }
noctavia_note_matcher = { path = "../../crates/noctavia_note_matcher" }
noctavia_ui_iced_widgets = { path = "../../crates/noctavia_ui_iced_widgets" }
noctavia_ui_transport = { path = "../../crates/noctavia_ui_transport" }
noctavia_midi_synth = { path = "../../crates/noctavia_midi_synth" }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossbeam-channel = "0.5"
rodio = "0.17"
clap = { version = "4.0", features = ["derive"] }
rfd = "0.15"

[features]
xsynth = ["noctavia_midi_synth/xsynth"]
