[package]
name = "noctavia_midi"
version.workspace = true
edition.workspace = true

[dependencies]
# Core
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Parser
midly.workspace = true

# IO
midir.workspace = true
crossbeam-channel = "0.5"

# Synth
rustysynth.workspace = true
rodio.workspace = true
xsynth-core = { workspace = true, optional = true }
xsynth-soundfonts = { workspace = true, optional = true }

[features]
xsynth = ["dep:xsynth-core", "dep:xsynth-soundfonts"]
