[package]
name = "noctavia_midi"
version.workspace = true
edition.workspace = true

[dependencies]
# Core
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Parser
midly.workspace = true

# IO
midir.workspace = true
cpal.workspace = true
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
rustfft = "6.2"
wide = "0.7"

# Synth
rustysynth.workspace = true
rodio.workspace = true
xsynth-core = { workspace = true, optional = true }
xsynth-soundfonts = { workspace = true, optional = true }

[features]
xsynth = ["dep:xsynth-core", "dep:xsynth-soundfonts"]
