[package]
name = "noctavia_midi_synth"
version.workspace = true
edition.workspace = true

[dependencies]
rustysynth.workspace = true
rodio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
noctavia_midi_domain.workspace = true
serde = { workspace = true, features = ["derive"] }
xsynth-core = { workspace = true, optional = true }
xsynth-soundfonts = { workspace = true, optional = true }

[features]
xsynth = ["dep:xsynth-core", "dep:xsynth-soundfonts"]
